cmake_minimum_required(VERSION 3.15)
project(ACM)

set(CMAKE_CXX_STANDARD 11)

add_executable(ACM main.cpp 模板.cpp)
add_executable(35 Leetcode/数组/35搜索插入位置.cpp)
add_executable(27 Leetcode/数组/27移除元素.cpp)
add_executable(15 Leetcode/数组/15三数之和.cpp)
add_executable(628 Leetcode/数组/628三个数的最大乘积.cpp)
add_executable(1 Leetcode/数组/1两数之和.cpp)
add_executable(18 Leetcode/数组/18四数之和.cpp)
add_executable(209 Leetcode/数组/209长度最小的子数组.cpp)
add_executable(18-2 Leetcode/数组/18四数之和2.cpp)
add_executable(59-2 Leetcode/数组/59螺旋矩阵.cpp)
add_executable(867 Leetcode/数组/867转置矩阵.cpp)
add_executable(1476 Leetcode/数组/1476子矩形查询.cpp)
add_executable(17.10 Leetcode/数组/17.10主要元素.cpp)
add_executable(1588 Leetcode/数组/1588所有奇数长度子数组的和.cpp)
add_executable(offer04 Leetcode/数组/剑指Offer04二维数组中的查找.cpp)
add_executable(56 Leetcode/数组/56合并区间.cpp)
add_executable(offer53 Leetcode/数组/剑指Offer53II0～n-1中缺失的数字.cpp)
add_executable(73 Leetcode/数组/73矩阵置零.cpp)
add_executable(74 Leetcode/数组/74搜索二维矩阵.cpp)
add_executable(80 Leetcode/数组/80删除排序数组中的重复项II.cpp)
add_executable(1471 Leetcode/数组/1471数组中的k个最强值.cpp)
add_executable(offer21 Leetcode/数组/剑指Offer21调整数组顺序使奇数位于偶数前面.cpp)
add_executable(offer12 Leetcode/数组/剑指Offer12矩阵中的路径.cpp)

add_executable(322 Leetcode/回溯/322重新安排行程.cpp)
add_executable(37 Leetcode/回溯/37解数独.cpp)


add_executable(242 Leetcode/哈希表/242有效的字母异位词.cpp)
add_executable(349 Leetcode/哈希表/349两个数组的交集.cpp)
add_executable(202 Leetcode/哈希表/202快乐数.cpp)
add_executable(383 Leetcode/哈希表/383赎金信.cpp)
add_executable(138 Leetcode/哈希表/138复制带随机指针的链表.cpp)
add_executable(204 Leetcode/哈希表/204计数质数.cpp)
add_executable(347 Leetcode/哈希表/347前K个高频元素.cpp)
add_executable(355 Leetcode/哈希表/355设计推特.cpp)
add_executable(970 Leetcode/哈希表/970强整数.cpp)
add_executable(16.02 Leetcode/哈希表/面试题16.02单词频率.cpp)
add_executable(648 Leetcode/哈希表/648单词替换.cpp)
add_executable(438 Leetcode/哈希表/438找到字符串中所有字母异位词.cpp)
add_executable(offer48 Leetcode/哈希表/剑指Offer48最长不含重复字符的子字符串.cpp)
add_executable(609 Leetcode/哈希表/609在系统中查找重复文件.cpp)

add_executable(232 Leetcode/栈队/232用栈实现队列.cpp)
add_executable(235 Leetcode/栈队/225用队列实现栈.cpp)
add_executable(20 Leetcode/栈队/20有效的括号.cpp)

add_executable(207 Leetcode/图/207课程表.cpp)


add_executable(5642 Leetcode/周赛/42/5621无法吃午餐的学生数量.cpp)
add_executable(1701 Leetcode/周赛/42/1701平均等待时间.cpp)
add_executable(1702 Leetcode/周赛/42/1702修改后的最大二进制字符串.cpp)
add_executable(1704 Leetcode/周赛/221/1704判断字符串的两半是否相似.cpp)
add_executable(1705 Leetcode/周赛/221/1705吃苹果的最大数目.cpp)
add_executable(1710 Leetcode/周赛/222/1710卡车上的最大单元数.cpp)
add_executable(1711 Leetcode/周赛/222/1711大餐计数.cpp)
add_executable(1725 Leetcode/周赛/224/1725可以形成最大正方形的矩形数目.cpp)

add_executable(541 Leetcode/字符串/541反转字符串II.cpp)
add_executable(344 Leetcode/字符串/344反转字符串.cpp)
add_executable(offer05 Leetcode/字符串/剑指Offer05替换空格.cpp)
add_executable(151 Leetcode/字符串/151翻转字符串里的单词.cpp)
add_executable(offer05-2 Leetcode/字符串/剑指Offer05替换空格.cpp)
add_executable(443 Leetcode/字符串/443压缩字符串.cpp)
add_executable(468 Leetcode/字符串/468验证IP地址.cpp)


add_executable(206 Leetcode/链表/206翻转链表.cpp)
add_executable(61 Leetcode/链表/61旋转链表.cpp)
add_executable(25 Leetcode/链表/25K个一组翻转链表.cpp)
add_executable(offer22 Leetcode/链表/剑指Offer22链表中倒数第k个节点.cpp)
add_executable(142 Leetcode/链表/142环形链表2.cpp)
add_executable(203 Leetcode/链表/203移除元素.cpp)
add_executable(707 Leetcode/链表/707设计链表.cpp)
add_executable(206-1 Leetcode/链表/206反转链表.cpp)
add_executable(445-2 Leetcode/链表/445两数相加2.cpp)
add_executable(328 Leetcode/链表/328奇偶链表.cpp)
add_executable(0206 Leetcode/链表/0206回文链表.cpp)
add_executable(160 Leetcode/链表/160相交链表.cpp)
add_executable(21 Leetcode/链表/21合并两个有序链表.cpp)
add_executable(offer35 Leetcode/链表/剑指Offer35复杂链表的复制.cpp)
add_executable(0204 Leetcode/链表/面试题0204分割链表.cpp)
add_executable(1669 Leetcode/链表/1669合并两个链表.cpp)

add_executable(198 Leetcode/DP/198打家劫舍.cpp)
add_executable(91 Leetcode/DP/91解码方法.cpp)
add_executable(361 Leetcode/DP/361炸弹敌人.cpp)
add_executable(256 Leetcode/DP/256粉刷房子.cpp)
add_executable(674 Leetcode/DP/674最长联系递增序列.cpp)
add_executable(64 Leetcode/DP/64最小路径和.cpp)
add_executable(bei Leetcode/DP/背包问题.cpp)
add_executable(you Leetcode/DP/有障碍坐标下右走.cpp)
add_executable(lint669 Leetcode/DP/669换硬币.cpp)
add_executable(509 Leetcode/DP/509斐波那契数.cpp)
add_executable(70 Leetcode/DP/70爬楼梯.cpp)
add_executable(746 Leetcode/DP/746使用最小花费爬楼梯.cpp)
add_executable(62 Leetcode/DP/62不同路径.cpp)
add_executable(63 Leetcode/DP/63不同路径II.cpp)
add_executable(343 Leetcode/DP/343整数拆分.cpp)
add_executable(96 Leetcode/DP/96不同的二叉搜索树.cpp)
add_executable(beibao Leetcode/DP/01背包.cpp)

add_executable(xuanze Leetcode/马士兵/选择排序.cpp)


add_executable(LeastRecentlyUsedCache NowCoder/1Lru/LeastRecentlyUsedCache.cpp)
add_executable(N2 NowCoder/2直线过点.cpp)
add_executable(N3 NowCoder/3跳跃次数.cpp)
add_executable(N4 NowCoder/4返回两数组相加最大前k.cpp)




add_executable(BinaryTree 数据结构/树/BinaryTree.cpp)


add_executable(P1551 洛谷/并查集/P1551亲戚.cpp)


